@@ -1,3 +1,7 @@
+2012-08-12  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* contrib/toolbar.lisp: End of toolbar framework.
+
 2012-08-03  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (show-child): Show unmanaged windows
